--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -27,8 +27,8 @@
         android:layout_height="0dp"
         android:layout_weight="1"/>
     <Button
-        android:id="@+id/bannerGrab"
-        android:text="Grab Banners"
+        android:id="@+id/vulnerabilitiesFind"
+        android:text="Find Vulnerabilities"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
