--- a/app/src/main/res/layout/activity_vulnerabilities.xml
+++ b/app/src/main/res/layout/activity_vulnerabilities.xml
@@ -5,6 +5,10 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical"
+android:paddingBottom="@dimen/activity_vertical_margin"
+android:paddingLeft="@dimen/activity_horizontal_margin"
+android:paddingRight="@dimen/activity_horizontal_margin"
+android:paddingTop="@dimen/activity_vertical_margin"
 tools:context="talhajavedmukhtar.networkscan.VulnerabilitiesActivity">
     <ProgressBar
         android:id="@+id/vProgress"
